<resources>
    <string name="app_name">TeceMe Shopping Centre</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">Teceme Shopping Centre</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="copy_right_teceme">© 2020 Teceme Technology Limited</string>
    <string name="action_login">Login</string>
    <string name="login_text">Login</string>
    <string name="no_account_text">Don\'t have account ?</string>
    <string name="sign_up_text">Sign up</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_name">Name</string>
    <string name="sign_in_text">Sign in</string>
    <string name="have_account_text">Already have an account ?</string>
    <string name="signup_text">Signup</string>
    <string name="title_cart">Cart</string>
    <string name="title_stores">Stores</string>
    <string name="title_account">Account</string>
    <string name="search_your_product_text">Search Your Product</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_category_list">Categories</string>
    <string name="title_category_detail">Category Detail</string>
    <string name="title_store_list">Stores</string>
    <string name="title_store_detail">Store Detail</string>
    <string name="title_activity_store_map">Store Map</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_account">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="create_wallet_text">Create Wallet</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_stores_map">Stores Map</string>
    <string name="teceme_shopping_centre_notification_title_template">Teceme shopping centre: %1$s
    </string>
    <string name="teceme_shopping_centre_notification_placeholder_text_template">You said %1$s and
        lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum,
        velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed
        turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem,
        ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet
        turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat
        nec nec tortor.
    </string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="category_item_text">category item</string>
    <string name="prompt_question">Choose A Secret Question</string>
    <string name="prompt_enter_answer">Enter your answer</string>
    <string name="prompt_pin_code">Pin code</string>
    <string name="prompt_confirm_pin_code">Confirm pin code</string>
    <string name="action_create_wallet">Create Wallet</string>
    <string name="prompt_phone_text">Phone number</string>
    <string name="payment_method_text">Payment Method</string>
    <string name="which_method_text">Which payment method do want to use ?</string>
    <string name="action_cont_to_payment">Continue To Payment</string>
    <string name="confirmation_text">Confirmation</string>
    <string name="confirm_message_text">confirm message text</string>
    <string name="back_to_text">Back To Home</string>
    <string name="sub_total_text">Subtotal</string>
    <string name="system_charges_text">System charges</string>
    <string name="discount_text">Discount</string>
    <string name="total_text">Total</string>
    <string name="checkout_text">Checkout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name_text">Product name</string>
    <string name="todo">to do content description</string>
    <string name="store_name_hint">Store Name Over Here</string>
    <string name="store_location_hint">store location</string>
    <string name="store_desc_text">Description of store</string>
    <string name="referred_by_hint">Referred by</string>
    <string name="action_sign_up">Sign up</string>
    <string name="back_to_login">Back To Login</string>
    <string name="go_back">Go Back</string>
    <string name="create_wallet">+ "   " Create Wallet</string>
    <string name="notifications_text">Notifcations</string>
    <string name="choose_payment_method">Which type of payment method do you want to use ?</string>
    <string name="mtn_mobile_text">MTN Mobile</string>
    <string name="credit_card_text">Credit Card</string>
    <string name="teceme_pay_text">Teceme Pay</string>
    <string name="dont_have_a_wallet">You don\'t have Teceme Wallet? Create one now</string>
    <string name="no_notification_text">No Notification Available</string>
    <string name="description">Description</string>
    <string name="contact_text">Contact:</string>
    <string name="location">Location:</string>
</resources>