<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorWhite"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/payment_method_text"
        app:titleTextColor="@color/colorBlack" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite2"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/input_layout_margin"
                android:text="@string/payment_method_text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_large" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/oder_online" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/choose_payment_method"
                android:textColor="@color/colorBlack" />

            <RadioGroup
                android:id="@+id/payment_methods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/mtn_momo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/mtn_mobile_text" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/teceme_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/teceme_pay_text" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/credit_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credit_card_text" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/dont_have_a_wallet"/>
            <TextView
                android:id="@+id/create_wallet"
                android:layout_width="@dimen/button_width"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/input_layout_margin"
                android:background="@drawable/create_wallet_background"
                android:gravity="center"
                android:text="@string/create_wallet"
                android:textAlignment="gravity"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/to_payment"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:background="@drawable/ripple_effect_with_border"
                android:text="@string/action_cont_to_payment"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>